--- a/postDetail.html
+++ b/postDetail.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Post Detail | JS2</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/menu.js" type="module"></script>
-    <script src="js/socialProfile.js" type="module"></script>
-    <script type="module" src="js/routes/home.js"></script>
-    <title>Profil | CSS Framework</title>
+    <script type="module" src="js/post/postDetail.js"></script>
   </head>
-  <body class="bg-gray-100">
+  <body>
     <header class="bg-customPurple text-black p-2">
       <nav class="container mx-auto">
         <div class="flex justify-between items-center">
@@ -27,44 +25,47 @@
             </svg>
           </a>
           <div class="hidden md:flex items-center space-x-4">
-            <div class="flex justify-between py-3 px-6">
-              <form action="" class="w-full max-w-md">
-                <div
-                  class="relative flex items-center text-gray-400 focus-within:text-black"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-5 h-5 absolute ml-3 pointer-events-none"
+            <div class="flex flex-col sm:flex-row justify-between py-3 px-6">
+              <form action="" class="w-full sm:max-w-md">
+                <fieldset>
+                  <div
+                    class="relative flex items-center text-gray-400 focus-within:text-black"
                   >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="w-5 h-5 absolute ml-3 pointer-events-none"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                      />
+                    </svg>
+                    <input
+                      type="text"
+                      name="search"
+                      id="searchInput"
+                      placeholder="Search post"
+                      autocomplete="off"
+                      aria-label="Search post"
+                      class="w-full pr-3 pl-10 py-2 font-semibold placeholder-gray-500 text-black rounded-2xl border-none ring-2 ring-gray-300 focus:ring-gray-500 focus:ring-2"
                     />
-                  </svg>
-                  <input
-                    type="text"
-                    name="search"
-                    placeholder="Search post"
-                    autocomplete="off"
-                    aria-label="Search post"
-                    class="w-full pr-3 pl-10 py-2 font-semibold placeholder-customNav text-black rounded-2xl border-none ring-2 ring-customNav focus:ring-gray-500 focus:ring-2"
-                  />
-                </div>
+                  </div>
+                </fieldset>
               </form>
             </div>
             <a
-              href="/feed.html"
-              class="py-4 px-2 text-white font-semibold border-b-4 border-customNav"
+              href="/profile.html"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Profile</a
             >
             <a
               href="/feed.html"
-              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
+              class="py-4 px-2 text-white font-semibold border-b-4 border-customNav"
               >Feed</a
             >
             <a
@@ -106,6 +107,7 @@
           </div>
         </div>
 
+        <!-- Mobile Menu (hidden by default) -->
         <div class="hidden" id="mobile-menu">
           <form action="" class="w-full px-4 py-2">
             <div
@@ -139,14 +141,14 @@
             <li>
               <a
                 href="profile.html"
-                class="block text-sm py-4 px-2 text-white bg-customPurple font-semibold"
+                class="block text-sm py-4 px-2 text-black bg-customPurple font-semibold"
                 >Profile</a
               >
             </li>
             <li>
               <a
                 href="feed.html"
-                class="block text-sm py-4 px-2 bg-customPurple font-semibold"
+                class="block text-sm py-4 px-2 text-white bg-customPurple font-semibold"
                 >Feed</a
               >
             </li>
@@ -168,14 +170,8 @@
         </div>
       </nav>
     </header>
-
-    <main>
-      <section>
-        <div id="profile-user"></div>
-      </section>
-      <section>
-        <div id="profile-post"></div>
-      </section>
-    </main>
+    <section>
+      <div id="postDetailContainer"></div>
+    </section>
   </body>
 </html>
