New feedback fixing

--- a/feed.html
+++ b/feed.html
@@ -297,6 +297,7 @@
                 >
                   Close
                 </button>
+                <div id="message"></div>
               </div>
             </div>
           </div>
